# bilibili2mp4

./: .gitignore  Bili2MP4需求文档.md  GUI设计.md  LICENSE  README.md  package-lock.json  package.json  plan.md  vite.config.js
.cursor/rules/: bili2mp4-project.mdc  cache-parser.mdc  gui-macos.mdc  mp4box-conversion.mdc  rust-standards.mdc
.github/workflows/: build.yml
scripts/: create-release.sh  manual-convert.sh  remove-icon-bg.py  test-convert.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: convert_test.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-app-commands.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cache/: mod.rs  parser.rs  scanner.rs
src-tauri/src/config/: mod.rs  preferences.rs
src-tauri/src/convert/: mod.rs  mp4box.rs
src-tauri/src/filemgr/: conflict.rs  mod.rs  output.rs
